--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.scss
@@ -3,7 +3,13 @@
 
 form {
 
-	@include mat-form-field-background-white;
+	.white-bg-color {
+		@include mat-form-field-background-white;
+	}
+
+	.color-disabled {
+		color: rgba(0, 0, 0, 0.38);
+	}
 
 	.form-row {
 		@include form-row;
@@ -16,7 +22,11 @@ form {
 }
 
 mat-form-field{
-    margin-right: 20px;
+    width: 100%;
+}
+
+#address-fields mat-form-field {
+	width: fit-content;
 }
 
 div.form-buttons {
