--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/search/search.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/search/search.component.scss
@@ -11,25 +11,23 @@
 		@include form-radio-button;
 	}
 
-	.mat-form-field + .mat-form-field {
-		@include form-field;
-	}
-
 	.mat-action-row {
 		@include form-buttons;
 		margin-top: 25px;
 	}
 
-	.form-row {
-		@include form-row;
+	.white-bg-color {
+		@include mat-form-field-background-white;
 	}
 
-	@include mat-form-field-background-white
+	.color-disabled {
+		color: rgba(0, 0, 0, 0.38);
+	}
 
 }
 
 mat-form-field{
-    margin-right: 20px;
+    width: 100%;
 }
 
 .table-container {
