tg-5379 Agregar mensaje informativo de duración de token en pantalla "Establecer datos de acceso"

--- a/front-end/apps/projects/hospital/src/app/modules/auth/routes/access-data-reset/access-data-reset.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/routes/access-data-reset/access-data-reset.component.html
@@ -8,6 +8,7 @@
 				<span translate="auth.access-data-reset.SUBTITLE"></span>
 			</mat-card-subtitle>
 			<mat-card-subtitle fxLayoutAlign="space-around center">
+				<span class="text-danger" translate="auth.access-data-reset.WARNING_EXPIRATION" [translateParams]="{hours: (hoursExpiration$ | async)}"></span>
 			</mat-card-subtitle>
 		</mat-card-header>
 		<mat-card-content fxLayout="column" fxLayoutAlign="space-around center" >
