tg-5329 [FE] Se agrega el dialogo de solicitud de referencia junto con la interfaz correspondiente.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -625,7 +625,7 @@
 
 		<div id="solicitud-referencia" class="referencia" fxLayout="column" fxLayoutGap="10px">
 			<h2 [translate]="'ambulatoria.paciente.nueva-consulta.solicitud-referencia.TITLE'"></h2>
-			<span class="primary" [translate]="'ambulatoria.paciente.nueva-consulta.solicitud-referencia.ADD_REQUEST'"></span>
+			<span class="primary" [translate]="'ambulatoria.paciente.nueva-consulta.solicitud-referencia.ADD_REQUEST'" (click)="ambulatoryConsultationReferenceService.openReferenceDialog()"></span>
 		</div>
 
 		<div id="validations"
