--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -626,6 +626,10 @@
 		<div id="solicitud-referencia" class="referencia" fxLayout="column" fxLayoutGap="10px">
 			<h2 [translate]="'ambulatoria.paciente.nueva-consulta.solicitud-referencia.TITLE'"></h2>
 			<span class="primary" [translate]="'ambulatoria.paciente.nueva-consulta.solicitud-referencia.ADD_REQUEST'" (click)="ambulatoryConsultationReferenceService.openReferenceDialog()"></span>
+				<app-document-section-table data-display 
+												[columns]="ambulatoryConsultationReferenceService.getColumns()"
+												[data]="ambulatoryConsultationReferenceService.getData()">
+				</app-document-section-table>
 		</div>
 
 		<div id="validations"
