--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/previous-data/previous-data.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/previous-data/previous-data.component.html
@@ -6,22 +6,36 @@
 		</button>
 	</div>
 
-    <div fxLayout="row" class="image" fxLayout="row" fxLayoutAlign="center">
-        <img src='assets/images/error_outline.png'>
-    </div>
-
-    <div fxLayout="column" class="message" fxLayoutAlign="start center" fxLayoutGap="10px">
-        <span [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.CONTENT'"></span>
+	<div fxLayout="row" class="image" fxLayout="row" fxLayoutAlign="center">
+		<img src='assets/images/error_outline.png'>
+	</div>
+	<div fxLayout="column" class="message" fxLayoutAlign="start center" fxLayoutGap="10px">
+		<ng-container
+			*ngIf="previousData.isVitalSigns && previousData.isAnthropometricData; else content">
+			<span [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.CONTENT'"></span>
+		</ng-container>
 		<span class="question" [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.ASK'"></span>
-    </div>
+	</div>
 
-    <mat-dialog-actions>
-        <button mat-raised-button color="primary" type="button" (click)="discardData()">
-            <span [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.ADD'"></span>
-        </button>
-        <button mat-stroked-button color="warn" (click)="addData()">
-            <span [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.DISCARD'"></span>
-        </button>
-    </mat-dialog-actions>
-
+	<mat-dialog-actions>
+		<button mat-raised-button color="primary" type="button" (click)="addData()">
+			<span [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.ADD'"></span>
+		</button>
+		<button mat-stroked-button color="warn" (click)="discardData()">
+			<span [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.DISCARD'"></span>
+		</button>
+	</mat-dialog-actions>
 </div>
+
+<ng-template #content>
+	<ng-container
+		*ngIf="previousData.isAnthropometricData; else content_else">
+		<span [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.CONTENT_ANTHROMETRIC'"></span>
+	</ng-container>
+</ng-template>
+
+<ng-template #content_else>
+	<ng-container *ngIf="previousData.isVitalSigns">
+		<span [translate]="'ambulatoria.paciente.nueva-consulta.previous-data.CONTENT_VITAL_SIGNS'"></span>
+	</ng-container>
+</ng-template>
