tg-5444. Cambios producto de code review

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.html
@@ -6,9 +6,9 @@
 
     <div fxLayout="column" class="message" fxLayoutAlign="start center" fxLayoutGap="10px">
         <span *ngIf="isDengueProblem"
-            [translate]="'ambulatoria.paciente.problemas.epidemiological_report.DESCRIPTION_DENGUE'"></span>
+            [translate]="'ambulatoria.paciente.problemas.epidemiological_report.DENGUE_DESCRIPTION'"></span>
         <span *ngIf="!isDengueProblem"
-            [translate]="'ambulatoria.paciente.problemas.epidemiological_report.DESCRIPTION_COVID'"></span>
+            [translate]="'ambulatoria.paciente.problemas.epidemiological_report.COVID_DESCRIPTION'"></span>
         <span class="report-message"
             [translate]="'ambulatoria.paciente.problemas.epidemiological_report.REPORT'"></span>
     </div>
