--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/cell-templates/cell-templates.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/cell-templates/cell-templates.component.html
@@ -75,7 +75,7 @@
 		<div fxLayout="column">	
 			<span class="bold-text" translate="ambulatoria.paciente.nueva-consulta.solicitud-referencia.table.row.PROBLEMS"></span>
 			<span *ngFor="let problem of rowData.problems">
-				{{problem?.pt}}
+				{{problem?.snomed.pt}}
 			</span>
 		</div>
 		<div fxLayout="column">	
