--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.scss
@@ -44,4 +44,26 @@ mat-card {
 			margin: 0px;
 		}
 	}
+
+	.edit-professions {
+		border: 1px  solid #1a73e8;
+		box-sizing: content-box;
+		border-radius: 5px;
+		margin-top: 15px;
+		font-family: 15px, Roboto;
+		color: #1a73e8;
+		margin-bottom: auto;
+		min-height: auto;
+		white-space: normal
+	}
+}
+
+.tooth-dialog{
+	position: relative;
+}
+
+.mat-dialog-actions{
+	margin-top: 15px;
+	margin-bottom: auto;
+	min-height: auto;
 }
