tg-5397 [FE] Agrega corona dental que filtra, exfoliación dental y carilla dental como diagnosticos para diente

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
@@ -57,6 +57,11 @@
 	<svg id="red_long_line" width="48" height="2" viewBox="0 0 48 2" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<path d="M0 1L48 1" stroke="#EB5757" stroke-width="2" />
 	</svg>
+	<svg id="red_blue_circles" width="38" height="38" viewBox="0 0 38 38" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<circle id="Ellipse 77" cx="19" cy="19" r="18" stroke="#1A73E8" stroke-width="2" />
+		<circle id="Ellipse 78" cx="19" cy="19" r="16" stroke="#EB5757" stroke-width="2" />
+	</svg>
 
 
 
