--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/epidemiological-report/epidemiological-report.component.scss
@@ -1,23 +1,7 @@
-div {
-	font-family: Roboto, "Helvetica Neue", sans-serif;
-    font-size: 16px;
+.margin-0 {
+	margin: 0;
 }
 
-.message {
-    margin: 10px 7px;
-}
-
-.report-message {
-    font-weight: 600;
-}
-
-.epidemiological-report{
-	position: relative;
-}
-
-.close{
-	transform: scale(1.0);
-	position: absolute;
-	top: 0px;
-	right: 0px;
+.close {
+	opacity: 0.54;
 }
