--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/cell-templates/cell-templates.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/cell-templates/cell-templates.component.html
@@ -19,10 +19,8 @@
 	<div *ngIf="rowData.cronico" class="mat-small grayText"
 		translate="ambulatoria.paciente.nueva-consulta.problemas.ACLARACION_CRONICO"></div>
 	<div>
-		<span class="color-primary" *ngIf="rowData?.isReportable"
-			translate="ambulatoria.paciente.nueva-consulta.problemas.REPORT_PROBLEM"></span>
-		<span class="color-warn" *ngIf="rowData?.isReportable === false"
-			translate="ambulatoria.paciente.nueva-consulta.problemas.DO_NOT_REPORT_PROBLEM"></span>
+		<span class="color-primary" *ngIf="rowData?.isReportable">{{ rowData.epidemiologicalManualClassification?.description }}</span>
+		<span class="color-warn" *ngIf="rowData?.isReportable === false"  translate="ambulatoria.paciente.nueva-consulta.problemas.DO_NOT_REPORT_PROBLEM"></span>
 	</div>
 </ng-template>
 
