--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -118,7 +118,7 @@
 
 <ng-template #currentUserIsNotAllowedToMakeBothQueries>
 	<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" id="nueva_consulta" mat-flat-button
-		color="primary" mat-button (click)="openNuevaConsulta()">
+		color="primary" mat-button (click)="hasReferenceNotification()">
 		{{ 'ambulatoria.paciente.card.buttons.NUEVA_CONSULTA' | translate | uppercase }}</button>
 
 	<button *appHasRole="['ENFERMERO']" id="nueva_consulta" mat-flat-button color="primary" mat-button
