tg-5524 [P2] En Histórico HSI no debe verse duplicado los Profesionales.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/historical-problems-filters/historical-problems-filters.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/historical-problems-filters/historical-problems-filters.component.html
@@ -17,7 +17,7 @@
 		<mat-label [translate]="'ambulatoria.paciente.problemas.historical-problems-filters.PROFESSIONAL'"></mat-label>
 		<mat-select formControlName="professional" (selectionChange)="sendAllFiltersOnFilterChange()"
 			name="professional">
-			<mat-option *ngFor="let professional of professionals" [value]="professional.professionalId">
+			<mat-option *ngFor="let professional of professionals" [value]="professional.personId">
 				{{professional.professionalDescription}}
 			</mat-option>
 		</mat-select>
